<resources>
    <string name="app_name">Game of Thrones: characters</string>
    <string name="lannister_home_title">LANNISTER</string>
    <string name="stark_home_title">STARK</string>
    <string name="targariens_home_title">TARGARYEN</string>
    <string name="person_hint_words">Words:</string>
    <string name="person_hint_born">Born:</string>
    <string name="person_hint_titles">Titles:</string>
    <string name="person_hint_aliases">Aliases:</string>
    <string name="person_hint_father">Father:</string>
    <string name="person_hint_mother">Mother:</string>
    <string name="error_person_activity_no_person">Failed to get information about character</string>
    <string name="error_no_person">No data available</string>
    <string name="app_developer">Roman Novoselov</string>
    <string name="menu_search_item">Search</string>
    <string name="menu_search_hint">Search character of the house</string>
    <string name="no_info">no info</string>

    <string name="error_no_connection">No internet connection. The data may be irrelevant.</string>
    <string name="error_house_is_absent">Server error. Information about some houses are not updated.</string>
    <string name="error_some_data">Server error. The data may be irrelevant.</string>
</resources>
