<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout style="@style/person_layout_item_overal">

        <ImageView
            android:id="@+id/person_activity_icon_words"
            style="@style/person_icons.default_icon" />

        <LinearLayout
            style="@style/person_layout_item"
            android:layout_width="0dp"
            android:layout_height="72dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/hint_edit_text_style">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/person_activity_et_words"
                    style="@style/person_edit_text"
                    android:hint="@string/person_hint_words"
                    tools:text="Test" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <View style="@style/person_divider" />

    <LinearLayout style="@style/person_layout_item_overal">

        <ImageView
            android:id="@+id/person_activity_icon_born"
            style="@style/person_icons.default_icon" />

        <LinearLayout
            style="@style/person_layout_item"
            android:layout_width="0dp"
            android:layout_height="72dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/hint_edit_text_style">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/person_activity_et_born"
                    style="@style/person_edit_text"
                    android:hint="@string/person_hint_born"
                    tools:text="Test" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <View style="@style/person_divider" />

    <LinearLayout style="@style/person_layout_item_overal">

        <ImageView
            android:id="@+id/person_activity_icon_titles"
            style="@style/person_icons.default_icon" />

        <LinearLayout
            style="@style/person_layout_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/person_text_view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/person_hint_titles" />

            <ListView
                android:id="@+id/person_activity_titles_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/person_divider" />

    <LinearLayout style="@style/person_layout_item_overal">

        <ImageView
            android:id="@+id/person_activity_icon_aliases"
            style="@style/person_icons.default_icon" />

        <LinearLayout
            style="@style/person_layout_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/person_text_view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/person_hint_aliases" />

            <ListView
                android:id="@+id/person_activity_aliases_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/person_divider" />


    <LinearLayout style="@style/person_layout_item_overal">

        <ImageView
            android:id="@+id/person_activity_icon_father"
            style="@style/person_icons" />

        <LinearLayout
            style="@style/person_layout_item"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:orientation="vertical">

            <TextView
                style="@style/person_text_view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/person_hint_father" />

            <TextView
                android:id="@+id/person_activity_father_no_info_tv"
                style="@style/person_text_view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_little_8"
                android:text="@string/no_info" />

            <Button
                android:id="@+id/person_activity_bt_father"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:theme="@style/AppTheme.Button.Accent"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/person_divider" />

    <LinearLayout style="@style/person_layout_item_overal">

        <ImageView
            android:id="@+id/person_activity_icon_mother"
            style="@style/person_icons" />

        <LinearLayout
            style="@style/person_layout_item"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:orientation="vertical">

            <TextView
                style="@style/person_text_view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/person_hint_mother" />

            <TextView
                android:id="@+id/person_activity_mother_no_info_tv"
                style="@style/person_text_view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_little_8"
                android:text="@string/no_info" />

            <Button
                android:id="@+id/person_activity_bt_mother"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:theme="@style/AppTheme.Button.Accent"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/person_divider" />

</LinearLayout>